tests/transpiler/x/swift/query_sum_select.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2036420806/061/main.swift:6:35: error: value of type 'Int' has no member 'reduce'
 4 | for n in nums {
 5 |     if ((n as! Int) > 1) {
 6 |         _res.append((((n as! Int).reduce(0,+)) as! Double))
   |                                   `- error: value of type 'Int' has no member 'reduce'
 7 |     }
 8 | }
