tests/transpiler/x/swift/query_sum_select.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:18:38 GMT+7
let nums = [1, 2, 3]
let result = ({ var _res: [Double] = []
for n in nums {
    if ((n as! Int) > 1) {
        _res.append((((n as! Int).reduce(0,+)) as! Double))
    }
}
return _res })()
print((result as! Int))
